--- a/Rust/sharded_queue/Cargo.toml
+++ b/Rust/sharded_queue/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 name = "sharded_queue"
 readme = "readme.md"
 repository = "https://github.com/ivanivanyuk1993/utility.sharded_queue"
-version = "1.0.23"
+version = "1.0.24"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -23,3 +23,6 @@ nameof = "1.2.2"
 [[bench]]
 name = "sharded_queue"
 harness = false
+
+[profile.release]
+lto = true
