--- a/Rust/sharded_queue/Cargo.toml
+++ b/Rust/sharded_queue/Cargo.toml
@@ -7,12 +7,13 @@ license = "MIT OR Apache-2.0"
 name = "sharded_queue"
 readme = "readme.md"
 repository = "https://github.com/ivanivanyuk1993/utility.sharded_queue"
-version = "1.0.25"
+version = "1.0.26"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossbeam-utils = "0.8.16"
 
 [dev-dependencies]
 concurrent-queue = "2.2.0"
